[project]
name = "lasr-live-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Urja", email = "urjapawar@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "torch>=2.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
